# serializer version: 1
# name: test_all_entities[image.gummibaum_picture-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.gummibaum_picture',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'picture',
    'platform': 'fyta',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ce5f5431554d101905d31797e1232da8-0-plant_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[image.gummibaum_picture-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '953693ab3a2b026be8a6af935165ae407ed6991f0e28628f0948c3d16187fccf',
      'entity_picture': '/api/image_proxy/image.gummibaum_picture?token=953693ab3a2b026be8a6af935165ae407ed6991f0e28628f0948c3d16187fccf',
      'friendly_name': 'Gummibaum picture',
    }),
    'context': <ANY>,
    'entity_id': 'image.gummibaum_picture',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[image.kakaobaum_picture-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.kakaobaum_picture',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'picture',
    'platform': 'fyta',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ce5f5431554d101905d31797e1232da8-1-plant_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[image.kakaobaum_picture-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': 'ce7349abf2e7a627a40ec9f7f0c6d2eefefa2bf7eeb899e8589bd6532ded806c',
      'entity_picture': '/api/image_proxy/image.kakaobaum_picture?token=ce7349abf2e7a627a40ec9f7f0c6d2eefefa2bf7eeb899e8589bd6532ded806c',
      'friendly_name': 'Kakaobaum picture',
    }),
    'context': <ANY>,
    'entity_id': 'image.kakaobaum_picture',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
